templates/devops/arc/ingress-webhook.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: github-actions-runner-controller-webhook
  namespace: devops-arc
  annotations:
    cert-manager.io/cluster-issuer: ingress-nginx-controller.vine.svc.ops.openark
    kubernetes.io/ingress.class: ingress-nginx-controller.vine.svc.ops.openark
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    vine.ulagbulag.io/is-service: "true"
    vine.ulagbulag.io/is-service-public: "false"
    vine.ulagbulag.io/is-service-system: "true"
    vine.ulagbulag.io/service-kind: Github ARC Webhook
spec:
  rules:
    - host: ingress-nginx-controller.vine.svc.ops.openark
      http:
        paths:
          - path: /devops/arc/webhook(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: github-actions-runner-controller-github-webhook-server
                port:
                  number: 80
